--- a/public/training.css
+++ b/public/training.css
@@ -211,3 +211,73 @@ body {
   border: 1px solid #fff;
   box-shadow: 0 5px 40px 0 rgba(76.00000000000001, 111, 255, 0.1);
 }
+footer {
+  padding: 100px 0px;
+  background-color: #f8fafc;;
+}
+.footer-row {
+  gap: 110px;
+}
+.footer-col p {
+  color: #9397a0;
+  font-size: 15px;
+  margin-top: 20px;
+}
+.footer-col h5 {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.footer-col ul {
+  list-style-type: none;
+  margin-left: -30px;
+}
+.footer-col ul li {
+  color: #9397a0;
+  margin-top: 14px;
+  text-align: start;
+  cursor: pointer;
+  font-size: 14px;
+  transition: 0.5s ease;
+}
+.footer-col ul li:hover {
+  color: #fff;
+}
+.copy-col {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #9397a0;
+}
+.copy-col i {
+  margin-right: 8px;
+  font-size: 18px;
+  color: #fff;
+  transition: 0.6s;
+  cursor: pointer;
+}
+.copy-col i:nth-child(odd):hover {
+  color: #0000ff;
+}
+
+.copy-col i:nth-child(even):hover {
+  color: #ffabe6;
+}
+
+@media screen and (max-width: 767px) {
+  .copy-col {
+    padding: 0;
+  }
+}
+.quick-links li a{
+  color: #9397a0;
+    margin-top: 14px;
+    text-align: start;
+    cursor: pointer;
+    font-size: 14px;
+    transition: 0.5s ease;
+    text-decoration: none;
+}
+.quick-links li a:hover{
+  color: #0000ff;
+}
