--- a/public/about.css
+++ b/public/about.css
@@ -195,7 +195,7 @@ height: 150px;
 
 /* newsletter */
 .newsletter {
-  background-image: url(https://preview.codeless.co/converta/default/wp-content/uploads/2023/03/footer-bg-004.jpeg);
+  background-image: url(https://preview.codeless.co/converta/default/wp-content/uploads/2023/03/footer-bg-004webP);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
