--- a/public/training.css
+++ b/public/training.css
@@ -83,7 +83,7 @@ body {
   /* background-color: #f8fafc; */
   width: 100%;
   height: 500px;
-  background-image: url("images/training-bg\ \(2\).jpg");
+  background-image: url("images/training-bg\ \(2\)webP");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
