--- a/public/dev.css
+++ b/public/dev.css
@@ -122,7 +122,7 @@ body {
 .development {
   margin-top: 140px;
   margin-bottom: 150px;
-  /* background-image: url("images/bg-patter-new-min-1webP"); */
+  /* background-image: url("images/bg-patter-new-min-1.webP"); */
   background-position: top right;
   background-repeat: no-repeat;
   background-size: cover;
