--- a/public/it-solution.css
+++ b/public/it-solution.css
@@ -114,7 +114,7 @@ body {
 .business {
   margin-top: 150px;
   margin-bottom: 40px;
-  background-image: url("images/business-bg-1webP");
+  background-image: url("images/business-bg-1.webP");
   background-position: top left;
   background-repeat: no-repeat;
   background-size: auto;
